[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art Assets/OpenBucket.png" type="Texture" id=1]
[ext_resource path="res://Devices/PaintCan.gd" type="Script" id=2]
[ext_resource path="res://Art Assets/ClosedBucket.png" type="Texture" id=3]
[ext_resource path="res://Art Assets/OpenBucketPaint.png" type="Texture" id=4]
[ext_resource path="res://Art Assets/ClosedBucketPaint.png" type="Texture" id=5]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
gravity = Vector3( 0, 20, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="PaintCan" type="Node2D" groups=["PaintCan"]]
script = ExtResource( 2 )

[node name="PaintCanBodyOpen" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PaintCanInside" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="PaintCanBodyClose" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="PaintCanCloseLabel" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="Dripping" type="Particles2D" parent="."]
position = Vector2( -1, -3 )
emitting = false
amount = 1
lifetime = 1.5
explosiveness = 1.0
process_material = SubResource( 1 )
